--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,6 @@
 {
     "version": "0.2.0",
+    "miDebuggerPath": "c:\\mingw\\bin\\gdb.exe",
     "configurations": [
         {
             "name": "C++ Launch",
@@ -21,6 +22,32 @@
             ],
             "preLaunchTask": "build cpp",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "C/C++: g++.exe build and debug active file",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "C:\\msys64\\ucrt64\\bin\\gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "C/C++: g++.exe build active file"
         }
     ]
 }
